Bugfixing whitespace bottom

--- a/src/assets/scss/_reset.scss
+++ b/src/assets/scss/_reset.scss
@@ -90,6 +90,10 @@ input[type="radio"] {
   cursor: pointer;
 }
 
+#app {
+  height: calc(100vh + 100px);
+}
+
 .wrapper {
   padding-top: 40px;
 }
